# pipeworks

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE-MIT
.cache/clangd/index/: Engines.cpp.DC22FF0B7B228897.idx  engine.cpp.485EA93611304ABF.idx  engine.hpp.FC5AC31E2B97B492.idx  main.cpp.02756797C5DFB6F0.idx  renderer.cpp.8DB5248A6445EFA2.idx  renderer.hpp.5B2300967255FF42.idx  scene.cpp.885ABA9FA0B80C31.idx  scene.hpp.B79A21BAFC3FB9F8.idx  sdlmanager.cpp.655436E8D131F6F5.idx  sdlmanager.hpp.49748687C3C24D94.idx  sdlrenderer.cpp.33654D29C4F3C8B3.idx  sdlrenderer.hpp.F1B064E1F0BED3D4.idx
.github/workflows/: linux.yml  macosx.yml  windows.yml  windows.yml.disabled
bindings/: CMakeLists.txt
bindings/pipeworks-java/: CMakeLists.txt  build.gradle  settings.gradle
bindings/pipeworks-java/natives/: CMakeLists.txt
bindings/pipeworks-java/natives/src/: Engines.cpp
bindings/pipeworks-java/src/main/java/github/lightingcreations/pipeworks/java/: Engine.java  NativeRenderer.java  Renderer.java
bindings/pipeworks-rust/: CMakeLists.txt  Cargo.toml
demo/: CMakeLists.txt
demo/assets/: blaster.flac
demo/src/: blaster.cpp  blaster.hpp  main.cpp  ship.cpp  ship.hpp  starfieldbackground.cpp  starfieldbackground.hpp
doc/: Doxyfile.in
include/: audiodata.hpp  audiomixer.hpp  audioplayer.hpp  collision.hpp  engine.hpp  event.hpp  gameobject.hpp  imagedata.hpp  input.hpp  renderer.hpp  resourcemanager.hpp  scene.hpp  sdlrenderer.hpp
include/defaultaudiomixer/: defaultaudiomixer.hpp
include/objects/: background.hpp  bgm.hpp  emitter.hpp  sound_effect.hpp  soundeffect.hpp  sprite.hpp
include/sdlaudioplayer/: sdlaudioplayer.hpp
include/sdlrenderer/: sdlrenderer.hpp
src/: .engine.cpp.swp  audiomixer.cpp  audioplayer.cpp  collision.cpp  dr_flac.c  engine.cpp  event.cpp  gameobject.cpp  imagedata.cpp  input.cpp  renderer.cpp  resourcemanager.cpp  scene.cpp
src/defaultaudiomixer/: defaultaudiomixer.cpp
src/objects/: background.cpp  bgm.cpp  emitter.cpp  sound_effect.cpp  soundeffect.cpp  sprite.cpp
src/sdl/: sdlmanager.cpp  sdlmanager.hpp
src/sdlaudioplayer/: sdlaudioplayer.cpp
src/sdlrenderer/: sdlrenderer.cpp
